--- a/page2.html
+++ b/page2.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">how to build your own website</a></section><section class="mbr-section content5 cid-qHi2R7fvhp mbr-parallax-background" id="content5-27">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop your own website</a></section><section class="mbr-section content5 cid-qHi2R7fvhp mbr-parallax-background" id="content5-27">
 
     
 
